<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_notes"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Notes" />

    <TextView
        android:id="@+id/select_subject_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="8dp"
        android:text="@string/SelectSubject"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp" />
    
    <Spinner
        android:id="@+id/spSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:prompt="@string/choose_subject"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/spNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:prompt="@string/choose_note"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/bnOpen"
        style="@style/btnStyleGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:text="Open" />

</LinearLayout>