<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/lecture_page_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"  >
     	
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
	        
            <TextView
		        android:id="@+id/lecture_title"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        style="@style/Title"/>
            
		    <TextView
		        android:id="@+id/lecture_unit_director_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/lecture_title"
		        android:layout_marginTop="10dp"
		        android:text="@string/UnitDirector"
		        android:textSize="18sp"
		    	android:visibility="gone" />
		
		    <TextView
		        android:id="@+id/lecture_unit_director"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/lecture_unit_director_label"
		        android:layout_marginLeft="20dp"
		    	android:visibility="gone" />
		    
		    <TextView
		        android:id="@+id/lecture_shortaddresslabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/lecture_unit_director"
		        android:layout_marginTop="10dp"
		        android:text="@string/ShortAddress"
		        android:textSize="18sp"
		        android:visibility="gone" />
		
		    <TextView
		        android:id="@+id/lecture_shortaddress"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="20dp"
		        android:layout_below="@+id/lecture_shortaddresslabel"
		        android:visibility="gone" />
		
		    
		    <TextView
		        android:id="@+id/lecture_addresslabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/lecture_shortaddress"
		        android:layout_marginTop="10dp"
		        android:text="@string/Address"
		        android:textSize="18sp" 
		        android:visibility="gone" />
		
		    <TextView
		        android:id="@+id/lecture_address_1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="20dp"
		        android:layout_below="@+id/lecture_addresslabel" 
		        android:visibility="gone" />

   		    <TextView
		        android:id="@+id/lecture_address_2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="20dp"
		        android:layout_below="@+id/lecture_address_1" 
		        android:visibility="gone" />
		    <TextView
		        android:id="@+id/lecture_address_3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="20dp"
		        android:layout_below="@+id/lecture_address_2"
		        android:visibility="gone" />
		    
		    
		    
   		    <TextView
		        android:id="@+id/lecture_notes_label"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/lecture_address_3"
		        android:layout_marginTop="10dp"
		        android:text="@string/Notes"
		        android:textSize="18sp"
		        android:visibility="visible" />

   		    <TextView
		        android:id="@+id/lecture_notes_list"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="20dp"
		        android:layout_below="@+id/lecture_notes_label"
		        android:visibility="visible" />
   		    
	        <Button
		        android:id="@+id/openNotesButton"
		        style="@style/btnStyleBlack"
	            android:layout_height="25dp"
           		android:layout_width="150dp"
	            android:textSize="10sp"
		        android:onClick="openNotes"
		        android:layout_marginLeft="20dp"
		        android:layout_below="@+id/lecture_notes_list"
		        android:visibility="gone"
		        android:text="@string/OpenNotes" /> 
		         
	        <Button
		        android:id="@+id/addNotesButton"
		        style="@style/btnStyleBlack"
	            android:layout_height="25dp"
           		android:layout_width="150dp"
	            android:textSize="10sp"
		        android:onClick="startViewFiles"
		        android:layout_marginLeft="20dp"
		        android:layout_below="@+id/openNotesButton"
		        android:visibility="gone"
		        android:text="@string/AddNotes" />
		    
		    <TextView
		        android:id="@+id/lecture_attendance_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/addNotesButton"
		        android:layout_marginTop="10dp"
		        android:text="@string/AttendanceStats"
		        android:textSize="18sp" />

		    <LinearLayout
            	android:id="@+id/lecture_attendance_layout"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
		        android:layout_below="@+id/lecture_attendance_label"
            	android:orientation="vertical">      		    
        	</LinearLayout>
        	
		</RelativeLayout>
		    
    </ScrollView>

    
</RelativeLayout>